# mandate-core

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.standalone.toml  Cargo.toml  LICENSE  README.md  SECURITY.md  TODO.md
.github/workflows/: release-verify-cli.yml
crates/core/: Cargo.toml
crates/core/src/: config.rs  event.rs  hashing.rs  ids.rs  lib.rs  proto.rs  ring_log.rs  rpc.rs  storage.rs  test_utils.rs
crates/core/src/billing/: balance_transfer.rs  cost_models.rs  difficulty.rs  metering.rs  mod.rs  pow_state.rs  pricing.rs  storage.rs  tenant_tier.rs  types.rs
crates/core/src/billing/pow_state/: constants.rs  event.rs  mod.rs  state_machine.rs  time.rs  types.rs
crates/core/src/crypto/: ciphertext.rs  mod.rs  signature.rs  verifier.rs
crates/core/src/event/: ban.rs  election_phase.rs  message.rs  mod.rs  poll.rs  poll_bundle_published.rs  ring.rs  vote.rs  vote_revocation.rs
crates/core/src/grpc/: interceptor.rs  mod.rs  services.rs  types.rs  wiring.rs
crates/core/src/grpc/inmemory/: ban.rs  billing.rs  bundle_published.rs  event.rs  group.rs  invite_code.rs  key_blob.rs  member.rs  mod.rs  organization.rs  poll.rs  ring.rs  tenant.rs  vote.rs  vote_revocation.rs
crates/core/src/grpc/services/: admin.rs  auth.rs  billing.rs  event.rs  group.rs  member.rs  mod.rs  organization.rs  ring.rs  storage.rs  tests.rs  tests_invite.rs  tests_vote_revocation.rs  tests_vote_revocation_tally.rs
crates/core/src/grpc/services/event/: mod.rs  poll.rs  pow_parking_tests.rs  push_event.rs  push_event_helpers.rs  service.rs  stream.rs  validation.rs
crates/core/src/grpc/services/invite/: create.rs  list.rs  mod.rs  register.rs  revoke.rs  validate.rs
crates/core/src/grpc/services/member/: export.rs  list.rs  list_member_groups.rs  list_member_organizations.rs  mod.rs  pending.rs
crates/core/src/hashing/: blake3.rs  canonical.rs  event_hashing.rs  mod.rs  primitives.rs
crates/core/src/key_manager/: manager.rs  mod.rs  parallel.rs  tests.rs
crates/core/src/pow/: mod.rs  types.rs  verifier.rs
crates/core/src/storage/: billing.rs  event.rs  facade.rs  group.rs  index.rs  invite_code.rs  keys.rs  mod.rs  organization.rs  ring.rs  tenant.rs  types.rs
crates/core/src/storage/facade/: billing.rs  event.rs  group.rs  invite_code.rs  keys.rs  mod.rs  organization.rs  ring.rs  token.rs
crates/mandate-audit-cli/: Cargo.toml
crates/mandate-audit-cli/src/: cli.rs  client.rs  main.rs  poll_bundle.rs  ring_cache.rs  verify.rs
crates/mandate-bounty/: Cargo.toml
crates/mandate-bounty-cli/: Cargo.toml
crates/mandate-bounty-cli/src/: main.rs
crates/mandate-bounty/fixtures/: 1000-voters.txt  bounty.toml  test-voters-10.txt
crates/mandate-bounty/src/: audit.rs  canonical_csv.rs  config.rs  derive_identity.rs  generate.rs  generate_solution.rs  lib.rs  manifest.rs  solution_bundle.rs  verify.rs
crates/mandate-bounty/src/generate/: artifacts.rs  events.rs  manifest.rs
crates/mandate-proto/: Cargo.toml  build.rs
crates/mandate-proto/src/: lib.rs
crates/protos/: admin.proto  auth.proto  billing.proto  config.proto  credential.proto  edge_admin.proto  error.proto  event.proto  group.proto  invite.proto  member.proto  organization.proto  pow.proto  ring.proto  storage.proto
crates/verify/: Cargo.toml
crates/verify-cli/: Cargo.toml  README.md
crates/verify-cli/src/: main.rs
crates/verify/examples/: generate_sample.rs
crates/verify/src/: bundle.rs  calibration.rs  cross_validate.rs  derivation.rs  export.rs  i18n.rs  key_image.rs  lib.rs  pipeline.rs  pipeline_tests.rs  profile.rs  registry.rs  shuffle.rs  signature.rs  tally.rs
crates/verify/tests/: integration.rs
mandate-proto/: Cargo.toml  build.rs
protos/: admin.proto  auth.proto  billing.proto  common.proto  event.proto  group.proto  member.proto  ring.proto  storage.proto
skills/bounty-challenger/: SKILL.md
skills/bounty-challenger/references/: bounty-challenger-guide.en.md
src/: event.rs  hashing.rs  ids.rs  lib.rs  proto.rs  ring_log.rs  storage.rs  test_utils.rs
src/crypto/: mod.rs  pow.rs  signature.rs  verifier.rs
src/grpc/: interceptor.rs  mod.rs  services.rs  types.rs  wiring.rs
src/key_manager/: manager.rs  mod.rs
src/storage/: facade.rs
