[package]
name = "mandate-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = { version = "2.0", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
ulid = "1.1"
hex = "0.4"
base64 = "0.22"
age = "0.10"
curve25519-dalek = { version = "4.1", features = ["serde"] }
nazgul = { git = "https://github.com/RyderFreeman4Logos/nazgul", rev = "b41d0392ce33741b1c647f5a9cc52f1c347118aa" }
sha3 = "0.10"
rand = "0.8"
