[package]
name = "mandate-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = { version = "2.0", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
ulid = "1.1"
hex = "0.4"
base64 = "0.22"
age = "0.10"
curve25519-dalek = { version = "4.1", features = ["serde"] }
nazgul = { git = "https://github.com/RyderFreeman4Logos/nazgul", rev = "dac22ff2da2c62efc34b872601b00e39e4d117f1" }
sha3 = "0.10"
rand = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
