[package]
name = "mandate-proto"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = { version = "0.12", default-features = false, features = ["codegen", "prost"] }
prost = "0.13"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tonic = { version = "0.12", default-features = false, features = ["codegen", "prost", "transport"] }

[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3.0"
