[package]
name = "mandate-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
indexmap.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
ulid.workspace = true
hex.workspace = true
base64.workspace = true
age.workspace = true
curve25519-dalek.workspace = true
nazgul.workspace = true
sha3.workspace = true
rand.workspace = true
bip39.workspace = true
hkdf.workspace = true
hmac.workspace = true
zeroize.workspace = true
subtle.workspace = true
mandate-proto.workspace = true

[dev-dependencies]
proptest.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tonic = { workspace = true, features = ["transport"] }
tonic-web.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
futures-util.workspace = true
parking_lot = "0.12"
