[package]
name = "mandate-core"
version.workspace = true
edition.workspace = true
publish = false

[features]
default = []
# Enable payment-related capabilities (gift cards, balance transfer, billing RPC paths).
payments = []
# Backward-compatible explicit alias for deployments that specifically gate XMR-like flows.
xmr-payments = ["payments"]

[dependencies]
arc-swap.workspace = true
serde.workspace = true
serde_json.workspace = true
indexmap.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
ulid.workspace = true
hex.workspace = true
base64.workspace = true
age.workspace = true
curve25519-dalek.workspace = true
nazgul.workspace = true
sha3.workspace = true
rand.workspace = true
bip39.workspace = true
hkdf.workspace = true
hmac.workspace = true
zeroize.workspace = true
subtle.workspace = true
mandate-proto.workspace = true
bs58.workspace = true
blake3 = "1.8.3"

[dev-dependencies]
proptest.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
js-sys = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tonic = { workspace = true, features = ["transport"] }
tonic-web.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
futures-util.workspace = true
parking_lot = "0.12"
dashmap.workspace = true
rspow.workspace = true
moka.workspace = true
bincode = "1.3"
rayon.workspace = true
prost.workspace = true
