[package]
name = "mandate-audit-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
clap = { version = "4.5", features = ["derive", "env"] }
futures-util.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tonic = { version = "0.12", default-features = false, features = ["prost", "codegen", "transport"] }
zeroize.workspace = true

mandate-core.workspace = true
mandate-proto.workspace = true
nazgul.workspace = true
base64.workspace = true
age.workspace = true
secrecy = "0.10"

[features]
default = []
