[package]
name = "mandate-bounty-cli"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "mandate-bounty"
path = "src/main.rs"

[dependencies]
mandate-bounty = { path = "../mandate-bounty" }

# CLI
clap = { workspace = true, features = ["derive"] }

# Serialization
serde_json.workspace = true

# RNG (for --seed deterministic mode)
rand.workspace = true

# Error handling
anyhow.workspace = true
