[package]
name = "mandate-bounty"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
# Serialization
serde.workspace = true
serde_json.workspace = true

# Config parsing
toml = { workspace = true }

# Unicode normalization
unicode-normalization = { workspace = true }

# Cryptography / KDF
sha3.workspace = true
argon2.workspace = true
age.workspace = true

# Security
zeroize.workspace = true

# Encoding
bs58.workspace = true

# Keypair generation
curve25519-dalek.workspace = true
rand.workspace = true
nazgul.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

[dev-dependencies]
rand.workspace = true
