[package]
name = "mandate-proto"
version.workspace = true
edition.workspace = true

[dependencies]
tonic.workspace = true
prost.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tonic = { workspace = true, features = ["transport"] }

[build-dependencies]
tonic-build.workspace = true
protoc-bin-vendored.workspace = true
