[package]
name = "mandate-verify"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
mandate-core.workspace = true

# Parallel processing
rayon.workspace = true
num_cpus.workspace = true

# XLSX
rust_xlsxwriter.workspace = true
calamine.workspace = true

# i18n
rust-i18n.workspace = true
opencc-rust.workspace = true

# RNG
rand.workspace = true

# Protobuf / gRPC
prost.workspace = true
tonic = { workspace = true, features = ["transport"] }

# Serialization (hardware profile)
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror.workspace = true

# Encoding
bs58.workspace = true

# Cryptography (for HKDF public-key derivation)
nazgul.workspace = true
curve25519-dalek.workspace = true
ulid.workspace = true

[dev-dependencies]
tempfile = "3"
